--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "SPAMusic",
-  "version": "1",
+  "version": "1.0.0",
   "description": "Single Page Application to search for music by author and song name.",
   "author": "Josue Miguel Osuna",
   "devDependencies": {
@@ -9,6 +9,7 @@
     "gulp": "^3.8.9",
     "gulp-concat": "^2.3.4",
     "gulp-connect": "^2.2.0",
+    "gulp-less": "^3.0.3",
     "gulp-cssmin": "^0.1.6",
     "gulp-if": "^1.2.4",
     "gulp-jasmine2-phantomjs": "^0.1.1",
