--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "phantomjs": "^1.9.12",
     "reactify": "^0.15.2",
     "vinyl-source-stream": "^0.1.1",
-    "watchify": "^2.1.1"
+    "watchify": "^2.1.1",
+    "superagent": "^1.3.0"
   },
   "dependencies": {
     "react": "^0.13.3"
